@@ -1,5 +1,7 @@
 * What is new in gsl-2.5:
 
+** added Romberg integration (gsl_integration_romberg)
+
 ** bug fix in deprecated functions gsl_multifit_wlinear_svd and
    gsl_multifit_wlinear_usvd (reported by Vlad Koli)
 
